@@ -1,6 +1,11 @@
+2009-01-16 10:38  rsbivand
+
+	* DESCRIPTION, R/gwr.R, man/gwr.Rd: fixing rss
+
 2009-01-13 20:15  rsbivand
 
-	* ChangeLog, DESCRIPTION, R/gwr.R: move rss outside if()
+	* ChangeLog, DESCRIPTION, R/gwr.R, inst/ChangeLog: move rss outside
+	  if()
 
 2008-10-02 17:04  rsbivand
 
